@startuml
skinparam classAttributeIconSize 0

class Etablissement {
    - id : int
    - nom : string
    - slug : string
    - description : text
    - numTelephone : string
    - adresse : string
    - adresseEmail : string
    - image: string
    - actif : bool
    - accueil : bool
    - createdAt : datetime
    - updatedAt : datetime
}

class Ville {
    - id : int
    - nom : string
    - codePostal : string
    - nomDepartement : string
    - numDepartement : string
    - nomRegion : string
}

class Categorie {
    - id : int
    - nom : string
    - createdAt : datetime
}

class Utilisateur {
    - id: int
    - prenom : string
    - nom : string
    - pseudo : string
    - email : string
    - motDePasse : string
    - createdAt : datetime
    - updatedAt : datetime
    - roles : array
    - actif : bool
}

Categorie"1..*"--"0..*"Etablissement
Ville"1..1"--"0..*"Etablissement
Etablissement"0..*"--"0..*"Utilisateur : Favori

Etablissement"0..*"--"1..1"Utilisateur : Possède
@enduml